# Execution_system

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml  run_paper_trading.py
.claude/: launch.json
configs/: broker.yaml  dashboard.yaml  overrides.yaml  risk.yaml  strategies.yaml  strategy_overrides.yaml  symbols.yaml
docs/: ARCHITECTURE_DETAILED.md  CHANGELOG_2026-06-12.md  CHANGELOG_2026-07-13.md  CONFIGURATION_GUIDE.md  DASHBOARD_API.md  DEVELOPMENT_GUIDE.md  INCIDENTS_2026-06-11.md  OPERATIONS.md  PLUGIN_CONTRACT.md  README.md  RUNBOOK.md  SUMMARY.md  architecture.md  assumptions.md  ibkr_setup.md  live_trading_checklist.md  manual_controls.md  market_data_requirements.md  order_lifecycle.md  paper_trading_checklist.md  position_lifecycle.md  risk_spec.md
docs/architecture/: execution-model.md  overview.md
docs/getting-started/: ibkr-setup.md  quickstart.md
docs/operations/: runbook.md
docs/reference/: configuration.md  dashboard-api.md  plugin-contract.md
scripts/: backfill_pnl.py  backfill_underlying.py  check_ibkr_connection.py  check_market_data.py  check_option_chain.py  live_cancel_shakeout.py  run_supervised.sh  shadow_replay.py  start_system.sh  stop_system.sh
src/analytics/: __init__.py  execution_quality.py  reports.py
src/app/: __init__.py  control.py  runner.py  status.py
src/broker/: __init__.py  ibkr_broker.py  interface.py  mock_broker.py
src/control/: __init__.py  command_queue.py  manual_control.py  overrides.py
src/core/: config.py  enums.py  models.py
src/dashboard/: __init__.py  app.py  (+1 more)
(+69 files in other folders)
