[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-system"
version = "0.1.0"
description = "Intraday options execution system for Interactive Brokers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ib_async>=1.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx2>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
